--- a/Predicting a Song's Popularity.ipynb
+++ b/Predicting a Song's Popularity.ipynb
@@ -73,7 +73,7 @@
       "metadata": {
         "id": "tWzqvqVg6l7i"
       },
-      "execution_count": 287,
+      "execution_count": 303,
       "outputs": []
     },
     {
@@ -90,7 +90,7 @@
         "* Are there relationships between a song's speechiness and its streams?\n",
         "* What are the feature characteristics of determining a songs popularity?\n",
         "\n",
-        "Answering these questions can help future music producers understand what kinds of songs to develop and how to market them. Speechiness can help artists while writing. The release month can help determine when the song should be released for maximum popularity. Valence can hlep artists create songs with an emotional tone that appeals to listeners."
+        "Answering these questions can help future music producers understand what kinds of songs to develop and how to market them. Speechiness can help artists while writing. The release month can help determine when the song should be released for maximum popularity. Valence can help artists create songs with an emotional tone that appeals to listeners."
       ],
       "metadata": {
         "id": "aAY7iVC74swA"
@@ -99,7 +99,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Data curation\n",
+        " helphData curation\n",
         "\n",
         "The next step in the data science life cycle is the collection of relevant data to answer the identified question.\n",
         "\n",
@@ -141,9 +141,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hcx2AC756xeT",
-        "outputId": "a03e378d-59fd-4a0c-c525-00def1c08ef8"
+        "outputId": "f8900528-2078-41cf-88b9-3d04ee4f7049"
       },
-      "execution_count": 288,
+      "execution_count": 304,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,9 +217,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 342
         },
-        "outputId": "67885184-d2de-437e-91a7-e4a051a7cf70"
+        "outputId": "247b5da7-d270-44c2-b276-49ad6d1bfaef"
       },
-      "execution_count": 289,
+      "execution_count": 305,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -264,7 +264,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8a79e37d-246d-4abf-92c9-d80692c143d9\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-058e24b3-8134-4a23-b03b-9847995b547f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -434,7 +434,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8a79e37d-246d-4abf-92c9-d80692c143d9')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-058e24b3-8134-4a23-b03b-9847995b547f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -486,12 +486,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-8a79e37d-246d-4abf-92c9-d80692c143d9 button.colab-df-convert');\n",
+              "        document.querySelector('#df-058e24b3-8134-4a23-b03b-9847995b547f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-8a79e37d-246d-4abf-92c9-d80692c143d9');\n",
+              "        const element = document.querySelector('#df-058e24b3-8134-4a23-b03b-9847995b547f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -511,8 +511,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-c5ec1d9b-ded2-4453-af4e-2ed179a080b1\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c5ec1d9b-ded2-4453-af4e-2ed179a080b1')\"\n",
+              "    <div id=\"df-c427195a-16a1-44cb-b4e6-9f4e5e05c88d\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c427195a-16a1-44cb-b4e6-9f4e5e05c88d')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -631,7 +631,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-c5ec1d9b-ded2-4453-af4e-2ed179a080b1 button');\n",
+              "            document.querySelector('#df-c427195a-16a1-44cb-b4e6-9f4e5e05c88d button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -647,7 +647,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 289
+          "execution_count": 305
         }
       ]
     },
@@ -705,7 +705,7 @@
       "metadata": {
         "id": "-4GY-llU-1_7"
       },
-      "execution_count": 290,
+      "execution_count": 306,
       "outputs": []
     },
     {
@@ -717,7 +717,7 @@
         "had one NA value, and since this is less than 1% of the data, we simply dropped the corressponding song/row.\n",
         "\n",
         "```key```\n",
-        "had 95 NA values, however since we do not"
+        "had 95 NA values, however since we do not account for it in our statistical analysis, we remove the column altogether."
       ],
       "metadata": {
         "id": "aiZzamBG_H5Q"
@@ -745,9 +745,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 635
         },
-        "outputId": "aa1cf5f4-2443-42ae-c3fb-1884c193a76d"
+        "outputId": "50591d9b-7871-4376-99b3-963051b98bc8"
       },
-      "execution_count": 291,
+      "execution_count": 307,
       "outputs": [
         {
           "output_type": "stream",
@@ -940,11 +940,11 @@
         "id": "ZTDyVVqsFzqF",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 318
+          "height": 425
         },
-        "outputId": "121cf448-a2b6-43e9-eadf-81265f30b062"
+        "outputId": "f8fea401-9422-4cd7-d89b-ae0798da27f9"
       },
-      "execution_count": 292,
+      "execution_count": 308,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -982,7 +982,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-738a2754-5ebb-402d-89f0-016657ae1567\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0cc960e0-5080-48dd-a66e-efe21e38eccb\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1151,7 +1151,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-738a2754-5ebb-402d-89f0-016657ae1567')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0cc960e0-5080-48dd-a66e-efe21e38eccb')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1203,12 +1203,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-738a2754-5ebb-402d-89f0-016657ae1567 button.colab-df-convert');\n",
+              "        document.querySelector('#df-0cc960e0-5080-48dd-a66e-efe21e38eccb button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-738a2754-5ebb-402d-89f0-016657ae1567');\n",
+              "        const element = document.querySelector('#df-0cc960e0-5080-48dd-a66e-efe21e38eccb');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1228,8 +1228,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-2e3926ac-c00f-401a-afd0-e524d823385a\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2e3926ac-c00f-401a-afd0-e524d823385a')\"\n",
+              "    <div id=\"df-8716f0c2-74a6-4e26-87da-13d193efcf82\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8716f0c2-74a6-4e26-87da-13d193efcf82')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1348,7 +1348,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-2e3926ac-c00f-401a-afd0-e524d823385a button');\n",
+              "            document.querySelector('#df-8716f0c2-74a6-4e26-87da-13d193efcf82 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1364,7 +1364,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 292
+          "execution_count": 308
         }
       ]
     },
@@ -1421,9 +1421,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 472
         },
-        "outputId": "803cca2a-8e9d-4c0e-b633-90b426154371"
+        "outputId": "2dbea628-8d4b-439c-bb2c-0866682b2e05"
       },
-      "execution_count": 293,
+      "execution_count": 309,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1459,9 +1459,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a4dd731c-6147-4941-f4d7-90006a65d715"
+        "outputId": "a5798d48-2222-424e-fbb6-3d2b7d0b2272"
       },
-      "execution_count": 294,
+      "execution_count": 310,
       "outputs": [
         {
           "output_type": "stream",
@@ -1537,9 +1537,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5ca8f114-8739-45ce-b383-863a1d7020e1"
+        "outputId": "89e18ce2-653a-4feb-f076-aca22d445e6f"
       },
-      "execution_count": 295,
+      "execution_count": 311,
       "outputs": [
         {
           "output_type": "stream",
@@ -1576,9 +1576,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 564
         },
-        "outputId": "0956752b-a282-4b9c-c81c-975808aa1d40"
+        "outputId": "7f635c2d-109a-4f1b-9858-824bdda0323e"
       },
-      "execution_count": 296,
+      "execution_count": 312,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1606,9 +1606,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iFkA9xowcdsh",
-        "outputId": "703352a9-88c0-4d0c-f539-bacf27046b6d"
+        "outputId": "7e86d68e-f93d-4abd-8ae6-52531282c670"
       },
-      "execution_count": 297,
+      "execution_count": 313,
       "outputs": [
         {
           "output_type": "stream",
@@ -1748,9 +1748,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "emVeZ9ENJaPe",
-        "outputId": "ebc0ff1f-0a43-41fe-855e-24f840cd7c5a"
+        "outputId": "e2a3d00e-6fad-4b08-ab5b-6e690338f5e8"
       },
-      "execution_count": 298,
+      "execution_count": 314,
       "outputs": [
         {
           "output_type": "stream",
@@ -1797,9 +1797,9 @@
           "height": 489
         },
         "id": "585eqql-7SHt",
-        "outputId": "78ef4b02-def7-4c10-9a1f-024625072845"
+        "outputId": "ef933571-c24f-42ae-e6a9-55ac9fe824e2"
       },
-      "execution_count": 299,
+      "execution_count": 315,
       "outputs": [
         {
           "output_type": "stream",
@@ -1924,9 +1924,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 89
         },
-        "outputId": "57e551b5-cb30-44e2-e16e-c37111fd6cfd"
+        "outputId": "a948bba4-765d-450f-a96f-e0ddbaf684f0"
       },
-      "execution_count": 300,
+      "execution_count": 316,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1943,7 +1943,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5810238c-523c-4869-a9f2-ddf3c004fbc6\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-60ee81be-5f54-4a25-8ad7-a3ade2b2eaf8\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1998,7 +1998,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5810238c-523c-4869-a9f2-ddf3c004fbc6')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-60ee81be-5f54-4a25-8ad7-a3ade2b2eaf8')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2050,12 +2050,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-5810238c-523c-4869-a9f2-ddf3c004fbc6 button.colab-df-convert');\n",
+              "        document.querySelector('#df-60ee81be-5f54-4a25-8ad7-a3ade2b2eaf8 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-5810238c-523c-4869-a9f2-ddf3c004fbc6');\n",
+              "        const element = document.querySelector('#df-60ee81be-5f54-4a25-8ad7-a3ade2b2eaf8');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2075,7 +2075,7 @@
               "  </div>\n",
               "\n",
               "\n",
-              "  <div id=\"id_e985d2a7-f6cb-40f4-b9dd-b0d5091241aa\">\n",
+              "  <div id=\"id_aa95ff37-8004-4085-b0f8-3f0ad11b98ae\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -2119,7 +2119,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_e985d2a7-f6cb-40f4-b9dd-b0d5091241aa button.colab-df-generate');\n",
+              "        document.querySelector('#id_aa95ff37-8004-4085-b0f8-3f0ad11b98ae button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -2183,9 +2183,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "15d4abb4-0eb9-4ee4-83c7-a2e68e148594"
+        "outputId": "6ab18d73-54a7-4430-f5ec-d30cb5f4461a"
       },
-      "execution_count": 301,
+      "execution_count": 317,
       "outputs": [
         {
           "output_type": "stream",
@@ -2269,7 +2269,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The following plot shows how song popularity is distribued based on all feature inputs.\n",
+        "The following plot shows how song popularity is distributed based on all feature inputs.\n",
         "\n",
         "Because our model has 5 input features (energy, danceability, speechiness, valence, and playlist), we applied Principal Component Analysis to compress them.\n",
         "\n",
@@ -2321,9 +2321,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 487
         },
-        "outputId": "d864eb59-91a9-48b5-b409-3668c392538b"
+        "outputId": "651a4dca-e703-4d8d-fd72-e2e5c7fa2075"
       },
-      "execution_count": 302,
+      "execution_count": 318,
       "outputs": [
         {
           "output_type": "display_data",
